--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ org.gradle.parallel=true
 
 minecraft_version=1.21.5
 parchment_version=2025.04.19
-loader_version=0.16.14
+fabric_loader_version=0.16.14
+fabric_resource_loader_version=3.1.6+02ca679649
 
 client_version=0.0.1
 api_version=0.0.1
