--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.parallel=true
 
 minecraft_version=1.21.5
 parchment_version=2025.04.19
+loom_version=1.10-SNAPSHOT
 fabric_loader_version=0.16.14
 fabric_resource_loader_version=3.1.6+02ca679649
 
