--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-minecraft_version=1.21.5
-parchment_version=2025.04.19
-loom_version=1.10-SNAPSHOT
+minecraft_version=1.21.6
+parchment_version=2025.06.29
+fabric_loom_version=1.10-SNAPSHOT
 fabric_loader_version=0.16.14
-fabric_resource_loader_version=3.1.6+02ca679649
+fabric_resource_loader_version=3.1.11+946bf4c3e8
 
 client_version=0.0.1
 api_version=0.0.1
